headers = files([
'cov.h',
'cov_factory.h',
'cov_linear_ard.h',
'cov_linear_one.h',
'cov_matern3_iso.h',
'cov_matern5_iso.h',
'cov_noise.h',
'cov_rq_iso.h',
'cov_periodic_matern3_iso.h',
'cov_periodic.h',
'cov_se_ard.h',
'cov_se_iso.h',
'cov_sum.h',
'cov_prod.h',
'gp.h',
'gp_utils.h',
'sampleset.h',
'rprop.h',
'input_dim_filter.h',
'cg.h',
])

install_headers(headers)