headers = files([
  'cg.h',
  'cov.h',
  'cov_factory.h',
  'cov_linear_ard.h',
  'cov_linear_one.h',
  'cov_matern3_iso.h',
  'cov_matern5_iso.h',
  'cov_noise.h',
  'cov_periodic.h',
  'cov_periodic_matern3_iso.h',
  'cov_prod.h',
  'cov_rq_iso.h',
  'cov_se_ard.h',
  'cov_se_iso.h',
  'cov_sum.h',
  'gp.h',
  'gp_utils.h',
  'input_dim_filter.h',
  'rprop.h',
  'sampleset.h',
])

install_headers(headers)
